# 3DEP-LiDAR

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: agritech_lidar.html  index.html  search.js
docs/agritech_lidar/: base.html  data_getter.html  metadata_builder.html  preprocessors.html  rotating_logs.html  utils.html  visualize.html
notebooks/: data_fetching.ipynb  explore_las_file.ipynb  to_geodf.ipynb
src/: base.py
src/agritech_lidar/: __init__.py  base.py  data_getter.py  metadata_builder.py  preprocessors.py  rotating_logs.py
src/agritech_lidar/data/: areas_metadata.csv  areas_metadata.json  filenames.txt
